Add html report

--- a/Reports/report.html
+++ b/Reports/report.html
@@ -283,7 +283,14 @@ function filter_table(elem) {
           <td class="col-links"></td></tr>
         <tr>
           <td class="extra" colspan="4">
-            <div class="log"><br/></div></td></tr></tbody>
+            <div class="log"> -------------------------------Captured log call-------------------------------- <br/>[32mINFO    [0m root:test_addCustomer.py:19 ************* Test_003_AddCustomer **********
+[32mINFO    [0m root:test_addCustomer.py:28 ************* Login succesful **********
+[32mINFO    [0m root:test_addCustomer.py:30 ******* Starting Add Customer Test **********
+[32mINFO    [0m root:test_addCustomer.py:38 ************* Providing customer info **********
+[32mINFO    [0m root:test_addCustomer.py:53 ************* Saving customer info **********
+[32mINFO    [0m root:test_addCustomer.py:55 ********* Add customer validation started *****************
+[32mINFO    [0m root:test_addCustomer.py:62 ********* Add customer Test Passed *********
+[32mINFO    [0m root:test_addCustomer.py:69 ******* Ending Add customer test **********<br/></div></td></tr></tbody>
       <tbody class="passed results-table-row">
         <tr>
           <td class="col-result">Passed</td>
